Added icbm animation and nuke